--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: python3.6
+      - image: python:3.6
     working_directory: /home/ubuntu/python-annict
     steps:
       - checkout
