--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: pip install -r requirements.txt
       - run:
           name: Run Tests
-          command: pytest tests --cov-report test-reports/coverage --cov annict -vv
+          command: pytest tests --cov-report html:test-reports/coverage --cov annict -vv
       - store_artifacts:
           path: test-reports/coverage
           destination: reports
