--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           name: Install Dependencies
           command: pip install -r requirements.txt
       - run:
+          name: Remove .pyc files
+          command: find . -name \*.pyc -delete
+      - run:
           name: Run Tests
           command: pytest tests --cov-report html:test-reports/coverage --cov annict -vv
       - store_artifacts:
