--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
           command: find . -name \*.pyc -delete
       - run:
           name: Run Tests
-          command: pipenv run pytest tests --cov-report html:test-reports/coverage --cov annict -vv
+          command: pipenv run pytest tests --junit-xml=test-results/pytest.xml --cov-report html:test-reports/coverage --cov annict -vv
+      - store_test_results:
+          path: test-results
       - store_artifacts:
           path: test-reports
           destination: test-reports
