--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: find . -name \*.pyc -delete
       - run:
           name: Run Tests
-          command: pipenv run pytest tests --junit-xml=test-reports/pytest.xml --cov-report html:test-reports/coverage --cov annict -vv
+          command: pipenv run ci
       - store_test_results:
           path: test-reports
       - store_artifacts:
