Updated pytest-raises and responses. However, although warning of pytest - raises has disappeared, warnings still occur in responses.

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ requests-cache = "*"
 furl = "*"
 arrow = "*"
 pytest = "*"
+pytest-raises = "*"
+responses = "*"
 
 [requires]
 python_version = "3.7"
