--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytest-flake8 = "^1.0"
 responses = "^0.10.5"
 pytest-runner = "^4.2"
 towncrier = "^18.6"
+tox = "^3.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
