--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ responses = "^0.10.5"
 pytest-runner = "^4.2"
 towncrier = "^18.6"
 tox = "^3.6"
+sphinx = "^1.8"
+sphinx_rtd_theme = "^0.4.2"
 
 [tool.towncrier]
 package = "annict"
