--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
       - run: poetry run pytest tests --cov-report html:test-reports/coverage --cov annict -vv --junit-xml=test-reports/pytest.xml
   codecov:
     steps:
-      - run: pip install codecov && codecov
+      - run: pip install --user codecov && $HOME/.local/bin/codecov
 jobs:
   build:
     docker:
