--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,11 +38,20 @@ pytest-cov = "^2.6"
 pytest-flake8 = "^1.0"
 responses = "^0.10.5"
 pytest-runner = "^4.2"
-towncrier = "^18.6"
+towncrier = {version = "^18.6", optional = true}
 tox = "^3.6"
-sphinx = "^1.8"
-sphinx_rtd_theme = "^0.4.2"
-pre-commit = "^1.14"
+sphinx = {version = "^1.8", optional = true}
+sphinx_rtd_theme = {version = "^0.4.2", optional = true}
+pre-commit = {version = "^1.14", optional = true}
+
+[tool.poetry.extras]
+travis-ci = ["codecov"]
+doc = [
+    "sphinx",
+    "sphinx_rtd_theme",
+]
+pre-commit = ["pre-commit"]
+news = ["towncrier"]
 
 [tool.towncrier]
 package = "annict"
