Add type hints.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py36, py37
+envlist = py36, py37, typecheck, black
 
 [testenv]
 whitelist_externals = poetry
@@ -8,3 +8,14 @@ skip_install = true
 commands =
     poetry install -v
     poetry run pytest tests/
+
+[testenv:typecheck]
+deps = mypy
+commands = mypy annict --ignore-missing-imports
+
+[testenv:black]
+skip_install = true
+commands =
+    black annict tests
+deps =
+    black
