--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,3 @@
-default_language_version:
-  python: python3.7
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.1.0
@@ -21,8 +19,8 @@ repos:
       - id: black
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.610-1
+    rev: v0.740
     hooks:
       - id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports]
+        #args: [--no-strict-optional, --ignore-missing-imports]
         exclude: ^docs/conf.py
